normalize url fix